fixed vid card download issue and paginator alignment issue

--- a/resident-ui/src/app/shared/header/header.component.css
+++ b/resident-ui/src/app/shared/header/header.component.css
@@ -105,6 +105,7 @@
   background-color: white;
   font-size: 13px;
   padding-bottom: 12px;
+  margin-left: -10.1rem;
 }
 
 /* .each-notification{
